--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -13,7 +13,7 @@ on:
   
 env:
   # Path to the CMake build directory.
-  build: '${{ github.workspace }}/build'
+  build: '${{ github.workspace }}\build'
 
 
 
@@ -28,5 +28,12 @@ jobs:
 
       - name: Configure CMake
         run: echo ${{ env.build }}
+      - run: dir "C:\Program Files (x86)"
+      - run: echo hello > ${{ env.build }\world.txt
+      - uses: actions/upload-artifact@v4
+        with:
+            name: my-artifact
+            path: ${{ env.build }\world.txt
+            compression-level: 9
 
 
