--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Configure CMake
         run: echo ${{ env.build }}
       - run: dir "C:\Program Files (x86)"
-      - run: echo hello > "${{ env.build }\world.txt"
+      - run: echo hello > ${{ env.build }}\world.txt
       - uses: actions/upload-artifact@v4
         with:
             name: my-artifact
