--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
             name: my-artifact
-            path: ${{ env.build }\world.txt
+            path: ${{ env.build }}\world.txt
             compression-level: 9
 
 
