--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -28,7 +28,9 @@ jobs:
 
       - name: Configure CMake
         run: echo ${{ env.build }}
-      - run: dir "C:\Program Files (x86)"
+      - run: dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0"
+      - run: dir "C:\Program Files (x86)\Windows Kits"
+      - run: md ${{ env.build }}
       - run: echo hello > ${{ env.build }}\world.txt
       - uses: actions/upload-artifact@v4
         with:
