--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -28,8 +28,9 @@ jobs:
 
       - name: Configure CMake
         run: echo ${{ env.build }}
-      - run: dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0"
-      - run: dir "C:\Program Files (x86)\Windows Kits"
+      - run: cmake --version
+      - run: dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0\SDK"
+      - run: dir "C:\Program Files (x86)\Windows Kits\10"
       - run: md ${{ env.build }}
       - run: echo hello > ${{ env.build }}\world.txt
       - uses: actions/upload-artifact@v4
