--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -28,14 +28,15 @@ jobs:
 
       - name: Configure CMake
         run: echo ${{ env.build }}
-      - run: cmake --version
-      - run: dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0\SDK"
-      - run: dir "C:\Program Files (x86)\Windows Kits\10"
+      - run: ps
+      - run: dir "C:\"
+      - run: dir "C:\Program Files (x86)\Windows Kits\10\bin"
       - run: md ${{ env.build }}
-      - run: echo hello > ${{ env.build }}\world.txt
+      - run: ps > ${{ env.build }}\world.txt
+      - run: tree "C:\"> ${{ env.build }}\world.txt
       - uses: actions/upload-artifact@v4
         with:
-            name: my-artifact
+            name: output
             path: ${{ env.build }}\world.txt
             compression-level: 9
 
