--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -33,7 +33,8 @@ jobs:
       - run: dir "C:\Program Files (x86)\Windows Kits\10\bin"
       - run: md ${{ env.build }}
       - run: ps > ${{ env.build }}\world.txt
-      - run: tree "C:\"> ${{ env.build }}\world.txt
+      - run: tree "D:\"> ${{ env.build }}\world.txt
+      - run: tree "E:\"> ${{ env.build }}\world.txt
       - uses: actions/upload-artifact@v4
         with:
             name: output
