--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -40,18 +40,18 @@ jobs:
             name: helloworld
             path: ${{ env.build }}\world.txt
             compression-level: 6
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@latest
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: tag_ttt
-      #     release_name: Release ttt
-      #     body: |
-      #       Test Release
-      #       - First Change
-      #       - Second Change
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: tag_ttt
+          release_name: Release ttt
+          body: |
+            Test Release
+            - First Change
+            - Second Change
           #attach : helloworld.zip
      #create-release --tag v1.0.0 --name "Version 1.0.0" --body "This is the body of the release." --attach release.tar.gz
       - name: Upload Artifact to Release
