--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ${{ env.build }}\world.txt
-          asset_name: helloworld.zip
+          asset_name: helloworld.txt
           asset_content_type: application/zip
       - run: tree "D:\"
 
