--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
             name: helloworld
-            path: ${{ env.build }}\world.txt
+            path: ${{ env.build }}
             compression-level: 6
       - name: Create Release
         id: create_release
@@ -61,8 +61,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.build }}\world.txt
-          asset_name: helloworld.txt
+          asset_path: ${{ env.build }}\helloworld.zip
+          asset_name: helloworld.zip
           asset_content_type: application/zip
       - run: tree "D:\"
 
