--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -61,7 +61,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.build }}\helloworld.zip
+          asset_path: ${{ env.build }}\build.zip
           asset_name: helloworld.zip
           asset_content_type: application/zip
       - run: tree "D:\"
