--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -54,6 +54,7 @@ jobs:
             - Second Change
           #attach : helloworld.zip
      #create-release --tag v1.0.0 --name "Version 1.0.0" --body "This is the body of the release." --attach release.tar.gz
+      - run: tree "D:\"
       - name: Upload Artifact to Release
         id: upload_artifact
         uses: actions/upload-release-asset@latest
@@ -61,9 +62,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.build }}\build.zip
+          asset_path: ${{ github.workspace }}\build.zip
           asset_name: helloworld.zip
           asset_content_type: application/zip
-      - run: tree "D:\"
+      
 
 
